# FractalSoundExplorer

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
include/: App.hpp  Complex.hpp  Fractals.hpp  Renderer.hpp  Settings.hpp  Synth.hpp
src/: App.cpp  Fractals.cpp  Main.cpp  Renderer.cpp  default.cfg
src/static/shaders/: frag.glsl
